First HTML project complete

--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,11 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<html>
+    <head>
+        <title>First</title>
+        <link rel="stylesheet" href="./style.css">
+    </head>
+    <body>
+        <div class="header">Header Div</div>
+        <div class="main">This is the Main Div</div>
+        <div class="footer">This is the footer</div>
+    </body>
+</html>
