Updated changes html projects

--- a/second/index.html
+++ b/second/index.html
@@ -12,7 +12,7 @@
     <div class="col-1">Col 1</div>
     <div class="col-2">Col 2</div>
     <div class="col-3top">Col 3 top</div>
-    <div class="col-3btm"><h2>Image Placeholder</</div>
+    <div class="col-3btm">Image Placeholder</div>
     </div><!--container -->
 </body>
 </html>
